# ddrgp_scorelog

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: implementation-task.md
.github/workflows/: README.md  build-master-db.yml  ci.yml
app/: AGENTS.md  README.md
docs/: implementation-roadmap.md  launch-jacket_catalog.bat  launch-jacket_catalog.ps1  next-task.md  requirements.md  screenshot-collection.md  vision-poc-prep.md
master/: README.md  __init__.py  __main__.py  builder.py  inspect.py
samples/: metadata.example.csv
tests/: test_capture_save_workflow.py  test_collection_auto_confirmation.py  test_ddrworld_auto_registration_policy.py  test_ddrworld_music_snapshot.py  test_ddrworld_snapshot_evaluation.py  test_jacket_catalog_pipeline.py  test_jacket_catalog_review_projection.py  test_jacket_reference_catalog.py  test_master_builder.py  test_master_match.py  test_personal_score_db_analysis_artifacts.py  test_personal_score_db_backup.py  test_personal_score_db_cli_save.py  test_personal_score_db_file_save.py  test_personal_score_db_migration_contract.py  test_personal_score_db_migration_status.py  test_personal_score_db_save.py  test_personal_score_db_save_adapter.py  test_personal_score_db_schema.py  test_personal_score_db_workflow.py  test_title_artist_evaluation.py  test_title_artist_ocr_diagnostics.py  test_unresolved_candidate_evaluation.py  test_vision_poc_classification.py  test_vision_poc_ocr.py  test_vision_poc_result_events.py
tools/: __init__.py
(+156 files in other folders)
