[project]
name = "ddrgp-scorelog"
version = "0.1.0"
description = "Tools for DanceDanceRevolution GRAND PRIX score logging."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "lxml>=5.3.0",
  "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

